--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -30,10 +30,10 @@
     "@metamask/key-tree": "^7.1.1",
     "@metamask/snaps-types": "^0.32.2",
     "@metamask/snaps-ui": "^0.32.2",
+    "@near-js/crypto": "^0.0.5",
     "@near-wallet-selector/core": "^8.2.0",
     "bn.js": "^5.2.1",
     "bs58": "^5.0.0",
-    "buffer": "^6.0.3",
     "near-api-js": "^2.1.4",
     "superstruct": "^1.0.3",
     "tweetnacl": "^1.0.3"
