--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "g9p2xw1kGlO5j61WuUMUzsbC+bw34EGU192hyftKScY=",
+    "shasum": "ivQrv09mQe6GixDRHng2k7wGtpLsQCOI82jngBjcMIs=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -19,6 +19,28 @@
   },
   "initialPermissions": {
     "snap_dialog": {},
+    "snap_notify": {},
+    "snap_getBip32Entropy": [
+      {
+        "path": [
+          "m",
+          "44'",
+          "397'",
+          "0'"
+        ],
+        "curve": "ed25519"
+      },
+      {
+        "path": [
+          "m",
+          "44'",
+          "1'",
+          "0'"
+        ],
+        "curve": "ed25519"
+      }
+    ],
+    "endowment:network-access": {},
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
