--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "snap",
+  "name": "@near-snap/plugin",
   "version": "0.1.0",
   "private": true,
   "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/here-wallet/near-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "src/index.ts",
