--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "useUnknownInCatchVariables": false,
+    "jsx": "react",
     "sourceMap": true,
     "strict": true,
     "target": "ES2017"
