--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "target": "es6",
     "jsx": "preserve"
   },
   "include": ["src", "index.d.ts"]
