--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -5,7 +5,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "target": "es6",
   },
   "include": ["src", "index.d.ts"]
 }
