--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "useUnknownInCatchVariables": false,
-    "jsx": "react",
+    "jsx": "preserve",
     "sourceMap": true,
     "strict": true,
-    "target": "ES2017"
+    "target": "es6",
   },
   "exclude": ["**/__snapshots__/**", "**/test/**", "**/*.test.ts"]
 }
