--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@near-snap/plugin",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "description": "View and sign transactions for NEAR Protocol",
   "repository": {
     "type": "git",
@@ -30,10 +30,12 @@
     "@metamask/snaps-types": "^0.32.2",
     "@metamask/snaps-ui": "^0.32.2",
     "@near-js/crypto": "^0.0.5",
+    "@near-js/signers": "^0.0.5",
     "@near-js/transactions": "^0.2.1",
     "@near-wallet-selector/core": "^8.2.0",
     "bn.js": "^5.2.1",
     "bs58": "^5.0.0",
+    "lodash.merge": "^4.6.2",
     "near-api-js": "^2.1.4",
     "superstruct": "^1.0.3",
     "tweetnacl": "^1.0.3"
@@ -48,6 +50,7 @@
     "@metamask/eslint-config-typescript": "^10.0.0",
     "@metamask/snaps-cli": "^0.32.2",
     "@metamask/snaps-jest": "^0.35.2-flask.1",
+    "@types/lodash.merge": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
