--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.0",
+  "version": "0.4.0",
   "description": "Sign transaction for NEAR Protocol",
   "proposedName": "NEAR Protocol Snap",
   "repository": {
@@ -7,7 +7,7 @@
     "url": "https://github.com/here-wallet/near-snap.git"
   },
   "source": {
-    "shasum": "fd9BZHZnhoFbYZHIIixYbcXVqyZDzfZufexjV+GylHQ=",
+    "shasum": "qvCZAtBzu2Sr4+V9GUcfzuVcKmCQpLqUG+gEIZpMUqU=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,6 +18,7 @@
     }
   },
   "initialPermissions": {
+    "snap_manageState": {},
     "snap_dialog": {},
     "endowment:rpc": {
       "dapps": true,
