--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-snap",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "private": true,
   "description": "",
   "homepage": "https://github.com/here-wallet/near-snap#readme",
@@ -25,6 +25,9 @@
     "lint:misc": "prettier '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' --ignore-path .gitignore",
     "start": "yarn workspaces foreach --parallel --interlaced --verbose run start",
     "test": "echo \"TODO\""
+  },
+  "dependencies": {
+    "@near-wallet-selector/core": "^8.3.0"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
