--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/here-wallet/near-snap.git"
   },
   "source": {
-    "shasum": "hYVyGzGFpfOGPgFQg4zN8XqSgnrljNUsAJuBMQlpL9k=",
+    "shasum": "rqUoUoyfx9hQjaGhEkoXQXLGbw+g3Ge08GabZV8jNXg=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -26,11 +26,21 @@
     },
     "snap_getBip32Entropy": [
       {
-        "path": ["m", "44'", "397'", "0'"],
+        "path": [
+          "m",
+          "44'",
+          "397'",
+          "0'"
+        ],
         "curve": "ed25519"
       },
       {
-        "path": ["m", "44'", "1'", "0'"],
+        "path": [
+          "m",
+          "44'",
+          "1'",
+          "0'"
+        ],
         "curve": "ed25519"
       }
     ]
