--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
