--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/here-wallet/near-snap.git"
   },
   "source": {
-    "shasum": "XNGJThPYGbiC1LVTrehtTl/quOTTo0jqXmz+32xyesk=",
+    "shasum": "mlergV5jvRcEDwoVvI8FEyPh03bHxeA4P9bqvhT5vj0=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -26,21 +26,11 @@
     },
     "snap_getBip32Entropy": [
       {
-        "path": [
-          "m",
-          "44'",
-          "397'",
-          "0'"
-        ],
+        "path": ["m", "44'", "397'", "0'"],
         "curve": "ed25519"
       },
       {
-        "path": [
-          "m",
-          "44'",
-          "1'",
-          "0'"
-        ],
+        "path": ["m", "44'", "1'", "0'"],
         "curve": "ed25519"
       }
     ]
